--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li class="listnav"><a href="info.html">Why tho?</a></li>
             <li class="listnav"><a href="project.html">Portfolio</a></li>
         </ul>
-        <audio src="files/shigatsu_wa_kimi_no_uso_ost.mp3" controls>
+        <audio src="files/shigatsu_wa_kimi_no_uso_ost.mp3" controls controlsList="nodownload">
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
         <!-- Audio Credit to Shigatsu Wa Kimi No Uso -->
