--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
         <title>Colin M.</title>
     </head>
     <body>
-        <ul class="navbar">
-            <li class="listnav"><span class="active"><a class="active" href="index.html">Profile</a></span></li>
-            <li class="listnav"><a href="info.html">Why tho?</a></li>
-            <li class="listnav"><a href="project.html">Portfolio</a></li>
-        </ul>
-        <audio src="files/shigatsu_wa_kimi_no_uso_ost.mp3" controls>
+        <div class="layout_fix">
+            <ul class="navbar">
+                <li class="listnav"><span class="active"><a class="active" href="index.html">Profile</a></span></li><li class="listnav"><a href="info.html">Why tho?</a></li>
+                <li class="listnav"><a href="project.html">Portfolio</a></li>
+            </ul>
+        </div>
+        <audio src="files/shigatsu_wa_kimi_no_uso_ost.mp3" controls controlsList="nodownload">
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
         <!-- Audio Credit to Shigatsu Wa Kimi No Uso -->
-        <h1><br />Introduction</h1>
+        <h1>Introduction</h1>
         <p class="indent">My name is Colin Mapanao and I'm a sophomore from James Campbell High School. I'm in Band and Chess Club. Below are pictures of things I play in order of when I started playing them:</p>
         <img class="chess" src="files/chess.jpg" alt="image of chess board">
         <!-- Credit to Theme Raider -->
