--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
             <li class="listnav"><a href="info.html">Why tho?</a></li>
             <li class="listnav"><span class="active"><a class="active" href="project.html">Portfolio</a></span></li>
         </ul>
-        <h1><br /><br />My Projects:</h1>
+        <h1><br />My Projects:</h1>
         <ul>
             <li><a class="default" href="https://docs.google.com/presentation/d/1mTAGcbBpJCyhZ0y7PhDnAa3LWAEAOsNqtjgOSvPU3rw/edit?usp=sharing">Blown to Bits presentation</a></li>
             <li>This website</li>
