last comment addition

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <img src="files/reicup.jpeg" alt="image from 3-gatsu no lion">
         <img src="files/sao.gif" alt="gif from sword art online">
         <img src="files/silentvoice.webp" alt="image from koe no katachi">
+        <!-- these photos came from different animes -->
     </body>
 </html>
