--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </audio>
         <!-- Audio Credit to Shigatsu Wa Kimi No Uso -->
         <h1>Introduction</h1>
-        <p class="indent">My name is Colin Mapanao and I'm a sophomore from James Campbell High School. I'm in Band and Chess Club. Below are pictures of things I play in order of when I started playing them:</p>
+        <p class="indent">My name is Colin Mapanao and I'm a sophomore from James Campbell High School. I was born in Hawaii but raised in the Philippines and came back to Hawaii when I was 8. I'm in Band and Chess Club. Below are pictures of things I play in order of when I started playing them:</p>
         <img class="chess" src="files/chess.jpg" alt="image of chess board">
         <!-- Credit to Theme Raider -->
         <img src="files/piano.jpeg" alt="image of a piano">
